Fix alignment issue in last col of gear table

--- a/src/components/organisms/GearTable/style.css
+++ b/src/components/organisms/GearTable/style.css
@@ -13,3 +13,8 @@
 .gearTable th {
   text-align: left;
 }
+
+.gearTable th:last-of-type,
+.gearTable td:last-of-type {
+  text-align: right;
+}
